--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -50,15 +50,15 @@
                     <img src="../resources/icons/bottle.svg" alt="bottle">
                     <img src="../resources/icons/cane.svg" alt="can">
                 </div>
-                <form action="#" method="get">
-                    <label for="volume">Medida ml</label>
+                <form action="#" method="get" class="form__cart">
+                   <!-- <label for="volume">Medida ml</label>
                     <input type="range" id="volume" list="volume">
                     <datalist id="volume">
                         <option value="300">
                         <option value="473">
                         <option value="750">
                         <option value="1000">
-                    </datalist>
+                    </datalist>-->
                     <input type="number" name="quantity" id="" min="1" max="100" required>
                     <a type="submit"><i class='bx bx-cart bx-sm'></i></a>
                 </form>
