--- a/index.html
+++ b/index.html
@@ -5,77 +5,94 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brewery | Inicio</title>
-    <a href="index.html"><link rel="shortcut icon" href="resources/favicon/favicon.png" type="image/x-icon"></a>
+    <link rel="shortcut icon" href="resources/favicon/blomsterne-favicon.png" type="image/x-icon">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="stylesheets/style.css">
 </head>
 <body>
     <header>
-        <nav>
-            <a href="index.html"><img src="resources/images/exampleLogotype.png" alt="Logo"></a>
-            <ul>
-                <li><a href="about-us.html">Acerca de nosotros</a></li>
-                <li><a href="#variety">Variedades</a></li>
-                <li><a href="contact.html">Contacto</a></li>
-                <li><a href="shop.html"><i class='bx bxs-beer' ></i></a></li>
-            </ul>
-        </nav>
-        <video autoplay loop muted style="margin-bottom: 100px;width:100%;height:100%;">
-            <source src="resources/videos/beer.mp4" type="video/mp4">
-        </video>
-        <h1>Slogan</h1>
+        <div class="header__container">
+            <nav class="header__navbar">
+                <a class="header__navbar-logo" href="index.html"><img src="resources/images/logo-cervezablomsterne.png" alt="Logo"></a>
+                <ul class="header__navbar-menu">
+                    <li><a href="pages/about-us.html">Acerca de nosotros</a></li>
+                    <li><a href="pages/variety.html" id="variety">Variedades</a>
+                        <ul class="variety-menu">
+                            <li><a href="">Porter lager</a></li>
+                            <li><a href="">Irish Red</a></li>
+                            <li><a href="">Red Ipa</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="pages/contact.html">Contacto</a></li>
+                    <li><a href="pages/shop.html"><i class='bx bxs-beer' ></i></a></li>
+                </ul>
+            </nav>
+            <video id="video" autoplay loop muted poster="">
+                <source src="resources/videos/beer.mp4" type="video/mp4">
+            </video>
+            <h1 id="header__slogan">Bancando la diversidad</h1>
+        </div>
     </header>
     <main>
 
-        <section>
-            <article>
-                <img src="resources/images/user1.jpg" alt="team">
-                <h5>NOMBRE APELLIDO</h5>
-                <h6>Puesto en el equipo</h6>
+        <div class="companyDescription__container">
+            <h3 class="subtitle">Acerca de nuestro producto</h3>
+            <h4 class="textCompanyDescription">Elaboramos nuestras cervezas de forma artesanal en base a  productos 100% naturales.
+                Seleccionas nuestras maltas cuidadosamente </h4>
+        </div>
+
+        <section class="section-team__container">
+            <article class="team__container">
+                <div id="team1-img" class="team__container-img"></div>
+                <h5 class="team-name">NOMBRE APELLIDO</h5>
+                <h6 class="team-rol">Puesto en el equipo</h6>
             </article>
-            <article>
-                <img src="resources/images/user2.png" alt="team">
-                <h5>NOMBRE APELLIDO</h5>
-                <h6>Puesto en el equipo</h6>
+            <article class="team__container">
+                <div id="team2-img" class="team__container-img" ></div>
+                <h5 class="team-name">NOMBRE APELLIDO</h5>
+                <h6 class="team-rol">Puesto en el equipo</h6>
             </article>
-            <article>
-                <img src="resources/images/user3.png" alt="team">
-                <h5>NOMBRE APELLIDO</h5>
-                <h6>Puesto en el equipo</h6>
+            <article class="team__container">
+                <div id="team3-img" class="team__container-img"></div>
+                <h5 class="team-name">NOMBRE APELLIDO</h5>
+                <h6 class="team-rol">Puesto en el equipo</h6>
             </article>
-            <button><a href="about-us.html">Conocé mas</a></button>
+            <button class="buttonTeamInfo"><a href="pages/about-us.html">Conocé mas</a></button>
         </section>
         <section>
-            <article id="variety">
-                <img src="resources/images/cream-ale.jpg" alt="cream ale">
+            <article id="variety" class="variety__container">
+                <a href="pages/product-detail.html"><img src="resources/images/irish_red.jpg" alt="Irish Red"></a>
             </article>
-            <article>
-                <img src="resources/images/pale-ale.jpg" alt="pale ale">
+            <article class="variety__container">
+                <a href="pages/product-detail.html"><img src="resources/images/baltic_porter.jpg" alt="Baltic Porter"></a>
             </article>
-            <article>
-                <img src="resources/images/pilsener.jpg" alt="pilsener">
+            <article class="variety__container">
+                <a href="pages/product-detail.html"><img src="resources/images/session_ipa.jpg" alt="Session Ipa"></a>
             </article>
-            <button><a href="variety.html">Ver mas</a></button>
+            <!--<button><a href="pages/variety.html">Ver mas</a></button>-->
         </section>
     </main>
-    <footer>
-        <section>
-            <a href="index.html"><img src="resources/images/exampleLogotype.png" alt="Logo"></a>
+    <footer id="footer__container">
+        <section class="footer__logo">
+            <a href="index.html"><img src="resources/images/logo-cervezablomsterne.png" alt="Logo"></a>
         </section>
-        <section>
+        <section class="footer__menu">
             <ul>
-                <li><a href="about-us.html">Acerca de nosotros</a></li>
-                <li><a href="#variety">Variedades</a></li>
-                <li><a href="contact.html">Contacto</a></li>
+                <li><a href="pages/about-us.html">Acerca de nosotros</a></li>
+                <li><a href="pages/variety.html">Variedades</a></li>
+                <li><a href="pages/contact.html">Contacto</a></li>
                 <li><a href="https://goo.gl/maps/3ChtQo4Y5G64iusZA" target="_blank"><i class='bx bx-current-location'></i> Av. Libertador 1234, CABA</a></li>
             </ul>
         </section>
-        <section>
-            <a href="https://www.facebook.com" target="_blank"><i class='bx bxl-facebook-circle' ></i></a>
-            <a href="https://www.instagram.com" target="_blank"><i class='bx bxl-instagram-alt'></i></a>
-            <a href="https://www.twitter.com" target="_blank"><i class='bx bxl-twitter' ></i></a>
-            <a href="https://api.whatsapp.com/send?phone=541168148261&text=Buenas+tardes%21+Tengo+una+cosulta" target="_blank"><i class='bx bxl-whatsapp' ></i>Whatsapp</a>
-            <form action="#" method="get">
-                <input type="email" name="mail" placeholder="juanperez@gmail.com">
+        <section class="footer__social">
+            <div class="footer__social-icons">
+                <a href="https://www.facebook.com" target="_blank"><i class='bx bxl-facebook-circle bx-sm' ></i></a>
+                <a href="https://www.instagram.com" target="_blank"><i class='bx bxl-instagram-alt bx-sm'></i></a>
+                <a href="https://www.twitter.com" target="_blank"><i class='bx bxl-twitter bx-sm' ></i></a>
+                <a href="https://api.whatsapp.com/send?phone=541168148261&text=Buenas+tardes%21+Tengo+una+cosulta" target="_blank"><i class='bx bxl-whatsapp bx-sm'></i></a>
+            </div>
+            <form action="#" method="get" id="form__subscribe">
+                <input type="email" name="mail" id="email" placeholder="juanperez@gmail.com">
                 <button type="submit">Subscribirse</button>
             </form>
         </section>
